@@ -4,7 +4,6 @@ export(convertAesVar)
 export(createSubjectProfileReport)
 export(filterData)
 export(getColorPalettePatientProfile)
-export(getLinetypePalettePatientProfile)
 export(getNLinesSubjectProfile)
 export(getPathTemplate)
 export(getShapePalettePatientProfile)
