@@ -1,0 +1,4 @@
+.onAttach <- function(libname, pkgname) {
+	options(patientProfilesVis.colors = colorsPatientProfiles)
+	options(patientProfilesVis.shapes = shapesPatientProfiles)
+}
