@@ -6,12 +6,7 @@
 either from a vector of names for the palette, or
 from a specified length.}
 \usage{
-getShapePalettePatientProfile(
-  n = NULL,
-  x = NULL,
-  includeNA = TRUE,
-  asText = TRUE
-)
+getShapePalettePatientProfile(n = NULL, x = NULL, includeNA = TRUE)
 }
 \arguments{
 \item{n}{Integer of length 1, number of elements in palette.}
@@ -24,10 +19,6 @@ Missing values are automatically removed, excepted if
 \item{includeNA}{Logical (TRUE by default), 
 should NA elements be retained in the palette in case
 \code{x} is specified?}
-
-\item{asText}{Logical (TRUE by default), should the palette
-be expressed as integer (base R plot and ggplot2 compatible)
-or in text format (e.g. required if combined with unicode symbols in ggplot2)?}
 }
 \value{
 vector of shape values
@@ -43,8 +34,6 @@ getShapePalettePatientProfile(n = 19)
 getShapePalettePatientProfile(x = paste('treatment', 1:4))
 # include missing
 getShapePalettePatientProfile(x = c(NA_character_, "group1"), includeNA = TRUE)
-# get symbols as 'text' (e.g. to be combined with Unicode in ggplot2)
-getShapePalettePatientProfile(x = paste('treatment', 1:4), asText = TRUE)
 }
 \author{
 Laure Cougnaud
