@@ -1,6 +1,7 @@
 1.5.0.999
     o change default color palette to generic: get[Color|Shape|Linetype]PalettePatientProfile
     o fix in case bookmarkVar is a factor
+    o new options to set color/shape palette globally
 1.5.0
     o add unit tests
     o no export of subjectProfileTheme
